--- a/azure-pipeline.yaml
+++ b/azure-pipeline.yaml
@@ -64,7 +64,7 @@ stages:
         npm install
         npm test
       displayName: 'Run Backend Tests'
-      
+
     - task: SonarCloudPrepare@1
       inputs:
         SonarCloud: 'final_project_sonarCloud'
@@ -76,5 +76,7 @@ stages:
         cliSources: '$(System.DefaultWorkingDirectory)/backend/src'
       displayName: 'Prepare SonarCloud Analysis'
 
-    - task: SonarCloudAnalyze@1
+    - script: |
+        cd backend
+        mvn sonar:sonar -X
       displayName: 'Run SonarCloud Analysis'
