--- a/azure-pipeline.yaml
+++ b/azure-pipeline.yaml
@@ -77,6 +77,6 @@ stages:
       displayName: 'Prepare SonarCloud Analysis'
 
     - script: |
-        cd backend
-        mvn sonar:sonar -X
-      displayName: 'Run SonarCloud Analysis'
+       curl http://localhost:3000/
+      displayName: 'Check Backend Health'
+
